[gd_scene load_steps=14 format=2]

[ext_resource path="res://Prepare/Retire/retire.gd" type="Script" id=1]
[ext_resource path="res://img/cliff.png" type="Texture" id=2]
[ext_resource path="res://title_screen/fonts/montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://title_screen/fonts/montserrat_eb_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://img/frog_away.png" type="Texture" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float period = 0.1;

void fragment()
{
	COLOR = texture(TEXTURE,UV);
	if(UV.y>0.8)
	{
		COLOR.a = max(COLOR.a-(UV.y-0.8)/0.2,0.0);
	}
	//COLOR.g = COLOR.g-COLOR.b;
}

void vertex() {
	VERTEX.y +=8.0*sin(TIME)*(1.0-UV.y);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/period = 0.1

[sub_resource type="OpenSimplexNoise" id=3]
seed = 5
octaves = 5
period = 6.2
persistence = 0.296

[sub_resource type="NoiseTexture" id=4]
bump_strength = 13.1
noise = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.212903, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0, 0.4375, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 1 )
shader_param/period = 0.1

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 1 )
shader_param/period = 0.1

[node name="Breed" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
script = ExtResource( 1 )

[node name="PondTexture" type="TextureRect" parent="."]
modulate = Color( 0.996078, 1, 0.364706, 1 )
material = SubResource( 2 )
margin_top = 720.0
margin_right = 720.0
margin_bottom = 2000.0
rect_rotation = -90.0
texture = SubResource( 4 )
expand = true
stretch_mode = 1

[node name="Gradient" type="TextureRect" parent="."]
margin_top = 720.0
margin_right = 720.0
margin_bottom = 2000.0
rect_rotation = -90.0
texture = SubResource( 6 )
expand = true
stretch_mode = 1

[node name="CliffTexture" type="TextureRect" parent="."]
material = SubResource( 7 )
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="."]
margin_left = 3.0
margin_top = 2.0
margin_right = 1281.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Thank you for playing"
align = 1

[node name="ReturnButton" type="Button" parent="."]
margin_left = 941.676
margin_top = 650.339
margin_right = 1265.68
margin_bottom = 706.339
custom_fonts/font = ExtResource( 4 )
text = "Return to Title"
flat = true

[node name="Frog" type="TextureRect" parent="."]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
material = SubResource( 8 )
margin_left = 790.119
margin_top = 220.853
margin_right = 1206.12
margin_bottom = 636.853
texture = ExtResource( 5 )
expand = true

[node name="Frog2" type="TextureRect" parent="."]
modulate = Color( 0.564706, 0.65098, 0.580392, 1 )
material = SubResource( 8 )
margin_left = 616.68
margin_top = 252.6
margin_right = 918.68
margin_bottom = 554.6
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 5 )
expand = true
[connection signal="pressed" from="ReturnButton" to="." method="_on_Button_pressed"]
